[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.portray]
modules = ['tracereq']
output_dir = "documentation_website"

[tool.portray.mkdocs]
repo_url = "https://github.com/asyrofist/tracereq"
repo_name = 'GitHub'
edit_uri = "edit/main/docs/"

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
Changelog = "CHANGELOG.md"

[[tool.portray.mkdocs.nav]]
Troubleshooting = "TROUBLESHOOTING.md"

[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav.Contributing]]
    "1. Contributing Guide" = "docs/kontribusi.md"

    [[tool.portray.mkdocs.nav.Contributing]]
    "2. Coding Standard" = "docs/standard.md"